Removed z-index as it causes issues

--- a/TheMovieBox/client/src/component/Hero/StarRating/Star.module.scss
+++ b/TheMovieBox/client/src/component/Hero/StarRating/Star.module.scss
@@ -1,6 +1,5 @@
 .star {
   background: transparent;
-  z-index: 100;
   position: relative;
   bottom: 12rem;
 
